tests/NormalTests/paczka1/fuzzy1/60817659.err
Error in line 4: D9Xvu A986 15,3
Error in line 10: D9Xvu A231 7,3
Error in line 19: oPkyBEX1kL S105 6,1
Error in line 18: Elx84DbIw S105 36,4
Error in line 24: S105 A231 28,8
Error in line 22: Elx84DbIw A986 17,3
Error in line 34: 533 S952 244,8
Error in line 31: D9Xvu S105 44,9
